--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Assets/Levels/PersitentLevel.PersitentLevel
 GlobalDefaultGameMode=/Game/Assets/Blueprints/Controls/BaseGamemode.BaseGamemode_C
+EditorStartupMap=/Game/Assets/Levels/PersitentLevel.PersitentLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
