--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Assets/Levels/PersitentLevel.PersitentLevel
 GlobalDefaultGameMode=/Game/Assets/Blueprints/Controls/BaseGamemode.BaseGamemode_C
 EditorStartupMap=/Game/Assets/Levels/PersitentLevel.PersitentLevel
+GameInstanceClass=/Game/Assets/Blueprints/Tools/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
