--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Assets/Levels/PersitentLevel.PersitentLevel
+GameDefaultMap=/Game/Assets/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Assets/Blueprints/Controls/BaseGamemode.BaseGamemode_C
 EditorStartupMap=/Game/Assets/Levels/PersitentLevel.PersitentLevel
 GameInstanceClass=/Game/Assets/Blueprints/Tools/BP_GameInstance.BP_GameInstance_C
