--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3A333FE34510986D9CB9EB80FD85981B
+bAllowWindowResize=False
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
