--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.Mobile.AntiAliasing=1
 r.AntiAliasingMethod=1
 r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
